--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! I’m a beginner blogger using GitHub Pages.</p>
+      <p>Hello! I’</p>
     </section>
   </main>
 
@@ -39,4 +39,5 @@
   </footer>
 </body>
 </html>
+
 
