--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="posts">
       <h2>Latest Posts</h2>
       <ul>
-        <li><a href="post1.html><strong>From the Scrubs to the Soul</strong></li>
+        <li><a href="post1.html"><strong>From the Scrubs to the Soul</strong></a></li>
         <li><strong>Another Blog Post</strong> - Coming Soon!</li>
       </ul>
     </section>
@@ -40,6 +40,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
