--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! I’</p>
+      <p>Hello! I’m dd e</p>
     </section>
   </main>
 
@@ -40,6 +40,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
