--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </nav>
   </header>
 
-  <main>
+   <main>
+     <!-- Posts Section -->
     <section id="posts">
       <h2>Latest Posts</h2>
       <ul>
@@ -31,7 +32,7 @@
 
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! I’m dd e</p>
+      <p>Hello! I’m still</p>
     </section>
   </main>
 
@@ -40,6 +41,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
