--- a/index.html
+++ b/index.html
@@ -2,92 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My GitHub Blog</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-    }
-    header, footer {
-      text-align: center;
-    }
-    nav a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #0366d6;
-    }
-    .post-preview {
-      margin-bottom: 20px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-    }
-    .recipe, .pictures {
-      margin-top: 40px;
-      padding: 20px;
-      border: 1px solid #ddd;
-      background-color: #f9f9f9;
-    }
-    .recipe h3, .pictures h3 {
-      margin-top: 0;
-    }
-    .recipe img, .pictures img {
-      width: 100%;
-      height: auto;
-      max-width: 400px;
-      margin-bottom: 10px;
-    }
-
-    /* Media Queries for Responsive Design */
-    @media (max-width: 768px) {
-      body {
-        padding: 10px;
-      }
-
-      .post-preview {
-        font-size: 14px;
-      }
-
-      nav a {
-        display: block;
-        margin-bottom: 10px;
-      }
-
-      .recipe, .pictures {
-        padding: 15px;
-      }
-
-      .recipe img, .pictures img {
-        max-width: 100%; /* Ensure images are responsive */
-      }
-    }
-
-    @media (max-width: 480px) {
-      body {
-        font-size: 14px;
-        padding: 5px;
-      }
-
-      header h1 {
-        font-size: 20px;
-      }
-
-      nav a {
-        font-size: 16px;
-        margin: 0 5px;
-      }
-
-      .post-preview {
-        font-size: 12px;
-      }
-
-      .recipe h3, .pictures h3 {
-        font-size: 18px;
-      }
-    }
-  </style>
+  <!-- Link to your external CSS -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -155,6 +73,7 @@
 
   
   
+
 
 
 
