--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>My Blog Posts</h1>
+    <h1>Voices Unfiltered: A Collection of Diverse Perspectives</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="posts.html">Posts</a>
@@ -48,3 +48,4 @@
   </footer>
 </body>
 </html>
+
