--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Blog</title>
+  <title>Wandering Minds</title>
   <!-- Link to your external CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -77,6 +77,7 @@
 
   
   
+
 
 
 
