--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
     <!-- About Section -->
     <section id="about">
-      <h2>About Me</h2>
-      <p>Welcome..... This is a space where people come together to share what inspires them----Art,Pictures,Stories and more.It's a community that celebrates individuality and expression.</p>
+      <h2>About</h2>
+      <p>Welcome..... This is a space where people come together to share what inspires them----Art,Pictures,Stories and more.It's a community that celebrates individuality and expression.Feel free to explore, connect, and see what others are sharing. If something resonates with you, you’re always welcome to add your own voice to the mix.
+
+</p>
     </section>
 
     <!-- Recipe Section -->
@@ -77,6 +79,7 @@
 
   
   
+
 
 
 
