--- a/pictures.html
+++ b/pictures.html
@@ -33,9 +33,17 @@
           <img src="images/image2.jpg" alt="Beach" id="img2" class="preview-img">
           <p class="caption">Beach</p>
         </div>
-        <!-- More Picture Items... -->
+        <!-- Picture Item 3 -->
+<div class="picture-item" onclick="showPicture('img3', 'A vibrant cityscape at night.')">
+  <img src="images/image3.jpg" alt="Cityscape" id="img3" class="preview-img">
+  <p class="caption">Cityscape</p>
       </div>
-
+      <!-- Picture Item 4 -->
+       <!-- Picture Item 3 -->
+<div class="picture-item" onclick="showPicture('img4', 'A vibrant cityscape at night.')">
+  <img src="images/image4.jpg" alt="Cityscape" id="img4" class="preview-img">
+  <p class="caption">Cityscape</p> 
+</div> 
       <!-- Lightbox Modal -->
       <div id="lightbox" class="lightbox">
         <div class="lightbox-content">
@@ -51,3 +59,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
