--- a/index.html
+++ b/index.html
@@ -20,34 +20,6 @@
   </header>
 
   <main>
-    <!-- Preview Section -->
-    <section id="preview" class="preview">
-      <h2>Explore What's New</h2>
-      <div class="preview-content">
-        <!-- Post Previews -->
-        <div class="preview-item">
-          <h3><a href="post1.html">From the Scrubs to the Soul</a></h3>
-          <p>A reflection on travel fellowship and personal growth. <a href="post1.html">Read more</a></p>
-        </div>
-
-        <div class="preview-item">
-          <h3><a href="post2.html">Another Blog Post</a></h3>
-          <p>This is a sneak peek of another exciting post. Full post coming soon! <a href="post2.html">Read more</a></p>
-        </div>
-
-        <!-- Image Previews -->
-        <div class="preview-item images">
-          <h3>Recent Photos</h3>
-          <div class="image-grid">
-            <img src="https://via.placeholder.com/300" alt="Travel Image 1" />
-            <img src="https://via.placeholder.com/300" alt="Travel Image 2" />
-            <img src="https://via.placeholder.com/300" alt="Travel Image 3" />
-          </div>
-          <p>Check out a few recent snapshots from my travels. Stay tuned for more!</p>
-        </div>
-      </div>
-    </section>
-
     <!-- Posts Section -->
     <section id="posts">
       <h2>Latest Posts</h2>
@@ -69,7 +41,7 @@
     <!-- About Section -->
     <section id="about">
       <h2>About</h2>
-      <p>Welcome..... This is a space where people come together to share what inspires them—Art, Pictures, Stories and more. It's a community that celebrates individuality and expression. Feel free to explore, connect, and see what others are sharing. If something resonates with you, you’re always welcome to add your own voice to the mix.</p>
+      <p>Welcome..... This is a space where people come together to share what inspires them----Art, Pictures, Stories, and more. It's a community that celebrates individuality and expression. Feel free to explore, connect, and see what others are sharing. If something resonates with you, you’re always welcome to add your own voice to the mix.</p>
     </section>
 
     <!-- Recipe Section -->
@@ -82,11 +54,11 @@
     <!-- Pictures Section -->
     <section id="pictures" class="pictures">
       <h2>Photo Gallery</h2>
-      <h3>My Travels</h3>
       <div>
-        <img src="https://via.placeholder.com/400" alt="Travel Image 1" />
-        <img src="https://via.placeholder.com/400" alt="Travel Image 2" />
-        <img src="https://via.placeholder.com/400" alt="Travel Image 3" />
+        <img src="images/image1.jpg" alt="Travel Image 1" />
+        <img src="images/image2.jpg" alt="Travel Image 2" />
+        <img src="images/image3.jpg" alt="Travel Image 3" />
+        <img src="images/image4.jpg" alt="Travel Image 4" />
       </div>
       <p>These are just a few snapshots from my recent travels. I love capturing the beauty around me!</p>
     </section>
