--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     <!-- Pictures Section -->
     <section id="pictures" class="pictures">
       <h2>Photo Gallery</h2>
-      <div>
+      <div class="picture-gallery">
         <img src="images/image1.jpg" alt="Travel Image 1" />
         <img src="images/image2.jpg" alt="Travel Image 2" />
         <img src="images/image3.jpg" alt="Travel Image 3" />
         <img src="images/image4.jpg" alt="Travel Image 4" />
-      </div>
+    </div>
       <p>tHATS IT</p>
     </section>
   </main>
@@ -69,4 +69,5 @@
   </footer>
 </body>
 </html>
+
 
