--- a/pictures.html
+++ b/pictures.html
@@ -43,6 +43,51 @@
           <img src="images/image4.jpg" alt="Cityscape" id="img4" class="preview-img">
           <p class="caption">Cityscape</p>
         </div>
+        <!-- Picture Item 5 -->
+        <div class="picture-item" onclick="showPicture('img5', 'A peaceful forest with sunbeams filtering through the trees.')">
+          <img src="images/image5.jpg" alt="Forest" id="img5" class="preview-img">
+          <p class="caption">Forest</p>
+        </div>
+        <!-- Picture Item 6 -->
+        <div class="picture-item" onclick="showPicture('img6', 'A serene lake surrounded by mountains at sunrise.')">
+          <img src="images/image6.jpg" alt="Lake" id="img6" class="preview-img">
+          <p class="caption">Lake</p>
+        </div>
+        <!-- Picture Item 7 -->
+        <div class="picture-item" onclick="showPicture('img7', 'A snowy mountain peak against a clear blue sky.')">
+          <img src="images/image7.jpg" alt="Mountain" id="img7" class="preview-img">
+          <p class="caption">Mountain</p>
+        </div>
+        <!-- Picture Item 8 -->
+        <div class="picture-item" onclick="showPicture('img8', 'A calm river flowing through a green valley.')">
+          <img src="images/image8.jpg" alt="River" id="img8" class="preview-img">
+          <p class="caption">River</p>
+        </div>
+         <!-- Picture Item 9 -->
+        <div class="picture-item" onclick="showPicture('img9', 'A stunning view of a cascading waterfall in a lush forest.')">
+          <img src="images/image9.jpg" alt="Waterfall" id="img9" class="preview-img">
+          <p class="caption">Waterfall</p>
+        </div>
+        <!-- Picture Item 10 -->
+        <div class="picture-item" onclick="showPicture('img10', 'A beautiful desert landscape with a setting sun.')">
+          <img src="images/image10.jpg" alt="Desert" id="img10" class="preview-img">
+          <p class="caption">Desert</p>
+        </div>
+        <!-- Picture Item 11 -->
+        <div class="picture-item" onclick="showPicture('img11', 'A misty morning in a tranquil valley.')">
+          <img src="images/image11.jpg" alt="Valley" id="img11" class="preview-img">
+          <p class="caption">Valley</p>
+        </div>
+        <!-- Picture Item 12 -->
+        <div class="picture-item" onclick="showPicture('img12', 'A bright green meadow with wildflowers under a blue sky.')">
+          <img src="images/image12.jpg" alt="Meadow" id="img12" class="preview-img">
+          <p class="caption">Meadow</p>
+        </div>
+        <!-- Picture Item 13 -->
+        <div class="picture-item" onclick="showPicture('img13', 'A peaceful mountain lake reflecting the surrounding peaks.')">
+          <img src="images/image13.jpg" alt="Mountain Lake" id="img13" class="preview-img">
+          <p class="caption">Mountain Lake</p>
+        </div>
       </div>
 
       <!-- Lightbox Modal -->
@@ -60,3 +105,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
