--- a/pictures.html
+++ b/pictures.html
@@ -94,6 +94,7 @@
       <div id="lightbox" class="lightbox">
         <div class="lightbox-content">
           <img id="lightbox-img" src="" alt="Full view" class="full-img">
+          <div class="caption-container">
           <p id="story" class="story-text"></p>
           <button class="close-btn" onclick="closeLightbox()">Close</button>
         </div>
@@ -105,4 +106,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
