--- a/pictures.html
+++ b/pictures.html
@@ -20,9 +20,9 @@
   </header>
 
   <main>
-    <section id="pictures">
+    <section id="pictures"> class="capturesque">
       <h2>Picture Wall</h2>
-      <div class="picture-wall">
+      <div class="capturesque">
         <!-- Picture Item 1 -->
         <div class="picture-item" onclick="showPicture('img1', 'A beautiful sunset over the mountains.')">
           <img src="images/image1.jpg" alt="Sunset" id="img1" class="preview-img">
@@ -106,5 +106,6 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
