--- a/pictures.html
+++ b/pictures.html
@@ -20,8 +20,8 @@
   </header>
 
   <main>
-    <section id="pictures"> class="capturesque">
-      <h2>Picture Wall</h2>
+    <section id="pictures" class="capturesque">
+      <h2>Capturesque</h2>
       <div class="capturesque">
         <!-- Picture Item 1 -->
         <div class="picture-item" onclick="showPicture('img1', 'A beautiful sunset over the mountains.')">
@@ -106,6 +106,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
