--- a/pictures.html
+++ b/pictures.html
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-    <section id="pictures" class="capturesque">
+    <section id="pictures" class="capturesque-section">
       <h2>Capturesque</h2>
       <div class="capturesque">
         <!-- Picture Item 1 -->
@@ -106,6 +106,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
