--- a/pictures.html
+++ b/pictures.html
@@ -97,6 +97,8 @@
           <div class="caption-container">
             <p id="story" class="story-text"></p>
             <button class="close-btn" onclick="closeLightbox()">Close</button>
+            <button class="prev-btn" onclick="showPrevPicture()">Previous</button>
+             <button class="next-btn" onclick="showNextPicture()">Next</button>
           </div>
         </div>
       </div>
@@ -107,3 +109,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
