--- a/pictures.html
+++ b/pictures.html
@@ -97,8 +97,8 @@
           <div class="caption-container">
             <p id="story" class="story-text"></p>
             <button class="close-btn" onclick="closeLightbox()">Close</button>
-            <button class="prev-btn" onclick="showPrevPicture()">Previous</button>
-             <button class="next-btn" onclick="showNextPicture()">Next</button>
+            <button class="prev-btn" onclick="showPrevPicture()">&larr;</button> <!-- Left arrow -->
+      <button class="next-btn" onclick="showNextPicture()">&rarr;</button> <!-- Right arrow -->
           </div>
         </div>
       </div>
@@ -109,4 +109,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
