--- a/pictures.html
+++ b/pictures.html
@@ -98,15 +98,11 @@
     <!-- Caption below image -->
     <p id="story" class="story-text"></p>
     
-    <!-- Button container for Close and Navigation -->
-    <div class="button-container">
-      <!-- Close Button -->
-      <button class="close-btn" onclick="closeLightbox()">Close</button>
-      
-      <!-- Navigation Arrows (Previous and Next) -->
-      <button class="prev-btn" onclick="showPrevPicture()">←</button>
-      <button class="next-btn" onclick="showNextPicture()">→</button>
-    </div>
+   <div class="caption-container-buttons">
+  <button class="prev-btn"></button>
+  <button class="close-btn">Close</button>
+  <button class="next-btn"></button>
+</div>
   </div>
 </div>
 
@@ -117,6 +113,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
