--- a/post1.html
+++ b/post1.html
@@ -15,8 +15,8 @@
   </header>
 
   <!-- Main Blog Post Content -->
-  <main>
-    <article>
+  <main class="blog-main">
+  <article>
       <h2><b>MY BIG BANG THEORY - HOW IT ALL BEGAN</b></h2>
       <p>You know, life holds the potential to take some unexpected turns. After completing my MBBS degree, I found myself at a crossroads. It struck me that sometimes, it's the small changes that lead to the most profound transformations in our lives. I was working hard, but I couldn't shake the feeling that I was working more for the approval of other doctors and the hospital staff than for the well-being of my patients. I slowly started to see how we are influenced by people who we surround ourselves with. I saw my seniors get frustrated with patients, and then I saw myself follow the same path knowing well enough that this isn’t who I wanted to be.</p>
       <p>I visited Sittilingi for one of the Rural Sensitisation Camps. My friends and I looked at it as a wonderful opportunity for a getaway picnic. A 3-day time-off. But the RSP had an unbelievable impact on me, though not immediately. I remember dozing off at points and zoning out. I faintly remember conversations too. But that’s what! I was allowed to do that - I had the space to be me amongst some very senior health professionals. I then had this feeling of coming back to Sittilingi just to be there and work for some time, a thought I couldn’t act upon immediately due to circumstances.</p>
@@ -83,4 +83,5 @@ Jan Chetna Manch, Bokaro is not a hospital, but a maternal center because women 
 
 </body>
 </html>
+
 
