--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wandering Minds</title>
   <!-- Link to your external CSS -->
-  <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
   <header>
@@ -69,6 +70,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
