--- a/posts.html
+++ b/posts.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Posts - My GitHub Blog</title>
-  <link rel="stylesheet" href="css/style.css"> <!-- Link to your existing CSS file -->
+  <title>Posts - Wandering Minds</title>
+  <!-- In the <head> section of posts.html -->
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/posts.css">
 </head>
 <body>
   <header>
@@ -48,4 +51,5 @@
   </footer>
 </body>
 </html>
+
 
