--- a/post1.html
+++ b/post1.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>From the Scrubs to the Soul</title>
-  <link rel="stylesheet" href="css/style.css">  <!-- Link to your external CSS -->
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/posts.css">
 </head>
 <body>
 
@@ -83,5 +85,6 @@ Jan Chetna Manch, Bokaro is not a hospital, but a maternal center because women 
 
 </body>
 </html>
+
 
 
