--- a/pictures.html
+++ b/pictures.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pictures - Wandering Minds</title>
   <!-- Link to your external CSS -->
-  <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
   <header>
@@ -113,6 +115,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
