--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Link to your external CSS -->
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
   <header>
@@ -70,6 +71,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
