--- a/post1.html
+++ b/post1.html
@@ -6,7 +6,7 @@
   <title>From the Scrubs to the Soul</title>
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/layout.css">
-<link rel="stylesheet" href="css/posts.css">
+<link rel="stylesheet" href="css/blog.css">
 </head>
 <body>
 
@@ -85,6 +85,7 @@ Jan Chetna Manch, Bokaro is not a hospital, but a maternal center because women 
 
 </body>
 </html>
+
 
 
 
