--- a/posts.html
+++ b/posts.html
@@ -7,7 +7,7 @@
   <!-- In the <head> section of posts.html -->
 <link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/layout.css">
-<link rel="stylesheet" href="css/posts.css">
+<link rel="stylesheet" href="css/post.css">
 </head>
 <body>
   <header>
@@ -51,5 +51,6 @@
   </footer>
 </body>
 </html>
+
 
 
