--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
   <header>
     <h1>A space to express, intertwine, and simply exist</h1>
+    </header>
+  <div class="sticky-nav">
     <nav>
       <a href="index.html">Home</a>
       <a href="posts.html">Posts</a>
@@ -19,7 +21,7 @@
       <a href="recipe.html">Recipe</a>
       <a href="pictures.html">Pictures</a>
     </nav>
-   </header>
+   </div>
 
   <main>
     <!-- Posts Section -->
@@ -71,6 +73,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
