--- a/pictures.html
+++ b/pictures.html
@@ -12,6 +12,8 @@
 <body>
   <header>
     <h1>A space to express, intertwine, and simply exist</h1>
+    </header>
+  <div class="sticky-nav">
     <nav>
       <a href="index.html">Home</a>
       <a href="posts.html">Posts</a>
@@ -19,7 +21,8 @@
       <a href="recipe.html">Recipe</a>
       <a href="pictures.html" class="active">Pictures</a> <!-- Highlighted for active page -->
     </nav>
-  </header>
+  </div> 
+  
 
   <main>
     <section id="pictures" class="capturesque-section">
@@ -115,6 +118,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
