--- a/posts.html
+++ b/posts.html
@@ -12,6 +12,8 @@
 <body>
   <header>
     <h1>Voices Unfiltered: A Collection of Diverse Perspectives</h1>
+    </header>
+  <div class="sticky-nav">
     <nav>
       <a href="index.html">Home</a>
       <a href="posts.html">Posts</a>
@@ -19,7 +21,7 @@
       <a href="recipe.html">Recipe</a>
       <a href="pictures.html">Pictures</a>
     </nav>
-  </header>
+  </div> 
 
   <main>
     <h2>.......</h2>
@@ -51,6 +53,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
