--- a/post1.html
+++ b/post1.html
@@ -15,7 +15,15 @@
     <h1>From the Scrubs to the Soul</h1>
     <p>By Joel Blesso</p>
   </header>
-
+<div class="blog-wrapper">
+  <aside class="blog-sidebar">
+    <nav>
+      <a href="index.html">← Home</a>
+      <a href="posts.html">All Posts</a>
+      <a href="previous-post.html">← Previous</a>
+      <a href="next-post.html">Next →</a>
+    </nav>
+  </aside>
   <!-- Main Blog Post Content -->
   <main class="blog-main">
   <article>
@@ -85,6 +93,7 @@ Jan Chetna Manch, Bokaro is not a hospital, but a maternal center because women 
 
 </body>
 </html>
+
 
 
 
