--- a/post1.html
+++ b/post1.html
@@ -17,13 +17,15 @@
   </header>
 <div class="blog-wrapper">
   <aside class="blog-sidebar">
-    <nav>
-      <a href="index.html">← Home</a>
-      <a href="posts.html">All Posts</a>
-      <a href="previous-post.html">← Previous</a>
-      <a href="next-post.html">Next →</a>
-    </nav>
-  </aside>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="posts.html">Posts</a>
+    <a href="about.html">About</a>
+    <a href="recipes.html">Recipes</a>
+    <a href="pictures.html">Pictures</a>
+  </nav>
+</aside>
+
   <!-- Main Blog Post Content -->
   <main class="blog-main">
   <article>
@@ -93,6 +95,7 @@ Jan Chetna Manch, Bokaro is not a hospital, but a maternal center because women 
 
 </body>
 </html>
+
 
 
 
