--- a/post1.html
+++ b/post1.html
@@ -86,15 +86,17 @@ Jan Chetna Manch, Bokaro is not a hospital, but a maternal center because women 
     <!-- Another Image -->
       <img src="images/post-image3.jpg" alt="GitHub repository" style="width: 100%; height: auto;">
     </article>
-  </main>
+ </main>
+</div> <!-- closes .blog-wrapper -->
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025. All rights reserved.</p>
-  </footer>
+<!-- Footer -->
+<footer>
+  <p>&copy; 2025. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
+
 
 
 
