--- a/pictures.html
+++ b/pictures.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="css/layout.css">
 <link rel="stylesheet" href="css/gallery.css">
 </head>
-<body>
+<body class="pictures-page">
+
   <header>
     <h1>A space to express, intertwine, and simply exist</h1>
     </header>
@@ -118,6 +119,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
