--- a/poem1.html
+++ b/poem1.html
@@ -15,38 +15,43 @@
   </header>
 
   <main>
+  <section class="poem-page" data-poem-page>
     <div class="poem-container">
-      <p>What was the miracle going inside</p>
-      <p>THe bubbling sensation in my tummy</p>
-      <p>Were you playing the seek following hide</p>
-      <p>Giving me smiles all the more wide</p>   
-      <br>   
-      <p>From being too faint to being too giant</p>
-      <p>From feeling like a bubble to feeling a twirl</p>
-      <p>Going on and on inside and giving me a chill</p>  
-      <p>Finding comfort in your own cozy well</p>
-      <br>
-      <p>At times on the left and at times on the right</p>
-      <p>Sometimes below and sometimes upright</p>    
-      <p>The tummy once loose is all the more tight</p>
-      <p>With the butterflies you give me all the night</p>
-      <br>
-      <p>At times you move a little less and make me worry</p>
-      <p>AMd at times you move a lot more to make me merry</p>
-      <p>You are the wonderful creation i sought from God</p> 
-      <p>You are my only wonder in the whole big world</p>
+      <div class="poem-content">
+        <p>What was the miracle going inside</p>
+        <p>THe bubbling sensation in my tummy</p>
+        <p>Were you playing the seek following hide</p>
+        <p>Giving me smiles all the more wide</p>   
+        <br>   
+        <p>From being too faint to being too giant</p>
+        <p>From feeling like a bubble to feeling a twirl</p>
+        <p>Going on and on inside and giving me a chill</p>  
+        <p>Finding comfort in your own cozy well</p>
+        <br>
+        <p>At times on the left and at times on the right</p>
+        <p>Sometimes below and sometimes upright</p>    
+        <p>The tummy once loose is all the more tight</p>
+        <p>With the butterflies you give me all the night</p>
+        <br>
+        <p>At times you move a little less and make me worry</p>
+        <p>AMd at times you move a lot more to make me merry</p>
+        <p>You are the wonderful creation i sought from God</p> 
+        <p>You are my only wonder in the whole big world</p>
 
-      
-     <div class="poem-author">
-  — Love
-  <div class="poem-sub-author">Mom</div>
-</div>
+        <div class="poem-author">
+          — Love
+          <div class="poem-sub-author">Mom</div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
 
-  </main>
 
   <footer>
     <p>&copy; 2025 My GitHub Blog</p>
   </footer>
 </body>
 </html>
+
 
