--- a/poem1.html
+++ b/poem1.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whispers at Dusk</title>
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
+ <!-- <link rel="stylesheet" href="css/base.css"> -->
+ <!-- <link rel="stylesheet" href="css/layout.css"> -->
   <link rel="stylesheet" href="css/poem.css">
   <script src="js/poemfit.js" defer></script>
 </head>
@@ -53,3 +53,4 @@
   </footer>
 </body>
 </html>
+
