--- a/poem1.html
+++ b/poem1.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whispers at Dusk</title>
- <!-- <link rel="stylesheet" href="css/base.css"> -->
- <!-- <link rel="stylesheet" href="css/layout.css"> -->
+  <link rel="stylesheet" href="css/base.css"> 
+  <link rel="stylesheet" href="css/layout.css"> 
   <link rel="stylesheet" href="css/poem.css">
-  <script src="js/poemfit.js" defer></script>
+ 
 </head>
-<body>
+<body class="poem-page">
   <header>
     <h1>Butterflies in the belly!</h1>
     <p>.....</p>
@@ -53,4 +53,5 @@
   </footer>
 </body>
 </html>
+
 
