--- a/poem1.html
+++ b/poem1.html
@@ -35,7 +35,7 @@
           <p>With the butterflies you give me all the night</p>
           <br>
           <p>At times you move a little less and make me worry</p>
-          <p>AMd at times you move a lot more to make me merry</p>
+          <p>And at times you move a lot more to make me merry</p>
           <p>You are the wonderful creation i sought from God</p> 
           <p>You are my only wonder in the whole big world</p>
 
@@ -53,5 +53,6 @@
   </footer>
 </body>
 </html>
+
 
 
