--- a/poem1.html
+++ b/poem1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Whispers at Dusk</title>
   <link rel="stylesheet" href="css/base.css"> 
-<!--  <link rel="stylesheet" href="css/layout.css"> --> 
+ <link rel="stylesheet" href="css/layout.css"> 
   <link rel="stylesheet" href="css/poem.css">
  
 </head>
@@ -61,6 +61,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
