--- a/poem1.html
+++ b/poem1.html
@@ -18,32 +18,32 @@
     <section class="poem-page" data-poem-page>
       <div class="poem-container">
         <div class="poem-content">
-          <p>
-            What was the miracle going inside
-            The bubbling sensation in my tummy
-            Were you playing the seek following hide
-            Giving me smiles all the more wide
+          <p class="stanza">
+What was the miracle going inside
+The bubbling sensation in my tummy
+Were you playing the seek following hide
+Giving me smiles all the more wide
           </p>
 
-          <p>
-            From being too faint to being too giant
-            From feeling like a bubble to feeling a twirl
-            Going on and on inside and giving me a chill
-            Finding comfort in your own cozy well
+          <p class="stanza">
+From being too faint to being too giant
+From feeling like a bubble to feeling a twirl
+Going on and on inside and giving me a chill
+Finding comfort in your own cozy well
           </p>
 
-          <p>
-            At times on the left and at times on the right
-            Sometimes below and sometimes upright
-            The tummy once loose is all the more tight
-            With the butterflies you give me all the night
+          <p class="stanza">
+At times on the left and at times on the right
+Sometimes below and sometimes upright
+The tummy once loose is all the more tight
+With the butterflies you give me all the night
           </p>
 
-          <p>
-            At times you move a little less and make me worry
-            And at times you move a lot more to make me merry
-            You are the wonderful creation i sought from God
-            You are my only wonder in the whole big world
+          <p class="stanza">
+At times you move a little less and make me worry
+And at times you move a lot more to make me merry
+You are the wonderful creation i sought from God
+You are my only wonder in the whole big world
           </p>
 
           <div class="poem-author">
