--- a/recipe.html
+++ b/recipe.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Blackboard</title>
-  <link rel="stylesheet" href="recipes.css">
+ <link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/recipes.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,3 +28,4 @@
 
 </body>
 </html>
+
