--- a/recipe.html
+++ b/recipe.html
@@ -2,59 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Recipe List</title>
-
-  <!-- Base + Layout -->
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-
-  <!-- Blackboard Styles -->
-  <link rel="stylesheet" href="css/recipes.css">
-
-  <!-- Google Font for Chalk Effect -->
-  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Recipe Blackboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/recipe.css" />
 </head>
 <body>
-
-  <!-- Header -->
-  <header>
-    <h1>Our Delicious Recipes</h1>
-  </header>
-
-  <!-- Sticky Nav -->
-  <div class="sticky-nav">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="recipes.html" class="active">Recipes</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </div>
-
-  <!-- Blackboard Section -->
-  <main class="blackboard">
-    <div class="blackboard-content">
-      <div class="column">
-        <ul>
-          <li>Chocolate Fudge Cake</li>
-          <li>Spaghetti Aglio e Olio</li>
-          <li>Classic Pancakes</li>
-          <li>Caesar Salad</li>
-          <li>Tomato Basil Soup</li>
-        </ul>
-      </div>
-      <div class="column">
-        <ul>
-          <li>Beef Stroganoff</li>
-          <li>Grilled Salmon</li>
-          <li>Banana Bread</li>
-          <li>Vegetable Stir-Fry</li>
-          <li>Apple Pie</li>
-        </ul>
-      </div>
+  <div class="blackboard">
+    <a href="index.html" class="home-button" aria-label="Home">Home</a>
+    <h1>Recipes</h1>
+    <div class="recipe-list">
+      <div class="recipe-item">Classic Waffles</div>
+      <div class="recipe-item">Blueberry Pancakes</div>
+      <div class="recipe-item">Chocolate Chip Cookies</div>
+      <div class="recipe-item">Banana Bread</div>
     </div>
-  </main>
-
+  </div>
 </body>
 </html>
