--- a/recipe.html
+++ b/recipe.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Recipe Blackboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/recipe.css" />
+  <link rel="stylesheet" href="css/recipes.css" />
 </head>
 <body>
   <div class="blackboard">
@@ -20,3 +20,4 @@
   </div>
 </body>
 </html>
+
