--- a/recipe.html
+++ b/recipe.html
@@ -11,13 +11,19 @@
   <div class="blackboard">
     <a href="index.html" class="home-button" aria-label="Home">Home</a>
     <h1>Recipes</h1>
-    <div class="recipe-list">
-      <div class="recipe-item">Classic Waffles</div>
-      <div class="recipe-item">Blueberry Pancakes</div>
-      <div class="recipe-item">Chocolate Chip Cookies</div>
-      <div class="recipe-item">Banana Bread</div>
+   <div class="recipe-list">
+    <div class="recipe-item">Classic Margherita Pizza</div>
+    <div class="recipe-item">Spaghetti Carbonara</div>
+    <div class="recipe-item">Chocolate Chip Cookies</div>
+    <div class="recipe-item">Lemon Garlic Roast Chicken</div>
+    <div class="recipe-item">Blueberry Muffins</div>
+    <div class="recipe-item">Veggie Stir Fry</div>
+    <div class="recipe-item">Beef Tacos</div>
+    <div class="recipe-item">Banana Pancakes</div>
+
     </div>
   </div>
 </body>
 </html>
+
 
