--- a/recipe.html
+++ b/recipe.html
@@ -11,19 +11,32 @@
   <div class="blackboard">
     <a href="index.html" class="home-button" aria-label="Home">Home</a>
     <h1>Recipes</h1>
-   <div class="recipe-list">
-    <div class="recipe-item">Classic Margherita Pizza</div>
-    <div class="recipe-item">Spaghetti Carbonara</div>
-    <div class="recipe-item">Chocolate Chip Cookies</div>
-    <div class="recipe-item">Lemon Garlic Roast Chicken</div>
-    <div class="recipe-item">Blueberry Muffins</div>
-    <div class="recipe-item">Veggie Stir Fry</div>
-    <div class="recipe-item">Beef Tacos</div>
-    <div class="recipe-item">Banana Pancakes</div>
-
+    <div class="recipe-list">
+      <div class="recipe-item">
+        <a href="cookbook.html#margherita-pizza">Classic Margherita Pizza</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#spaghetti-carbonara">Spaghetti Carbonara</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#chocolate-chip-cookies">Chocolate Chip Cookies</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#lemon-garlic-roast-chicken">Lemon Garlic Roast Chicken</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#blueberry-muffins">Blueberry Muffins</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#veggie-stir-fry">Veggie Stir Fry</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#beef-tacos">Beef Tacos</a>
+      </div>
+      <div class="recipe-item">
+        <a href="cookbook.html#banana-pancakes">Banana Pancakes</a>
+      </div>
     </div>
   </div>
 </body>
 </html>
-
-
