--- a/cookbook.html
+++ b/cookbook.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Cookbook</title>
-    <link rel="stylesheet" href="cookbook.css">
+    <link rel="stylesheet" href="css/cookbook.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <script src="cookbook.js"></script>
+    <script src="js/cookbook.js"></script>
 </body>
 
 </html>
