--- a/cookbook.html
+++ b/cookbook.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookbook</title>
-  <link rel="stylesheet" href="css/cookbook.css">
-  <script defer src="js/cookbook.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Recipe Blackboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/recipes.css" />
 </head>
 <body>
-
-  <div class="recipe-book">
-    <!-- Book content area where the pages will be dynamically loaded -->
-    <div class="book-content">
-      <!-- Each page of the recipe will be dynamically inserted here -->
-    </div>
-    
-    <!-- Navigation buttons for flipping between pages -->
-    <div class="nav-buttons">
-      <button id="prevBtn" disabled>Previous</button>
-      <button id="nextBtn">Next</button>
+  <div class="blackboard">
+    <a href="index.html" class="home-button" aria-label="Home">Home</a>
+    <h1>Recipes</h1>
+    <div class="recipe-list">
+      <!-- Recipes will be loaded here dynamically -->
     </div>
   </div>
 
+  <script src="recipes.js"></script> <!-- External JS file handling data -->
+  <script>
+    // Function to load recipes dynamically from JSON
+    function loadRecipes() {
+      fetch('recipes.json') // This assumes your recipes data is stored in recipes.json
+        .then(response => response.json()) 
+        .then(data => {
+          const recipeListContainer = document.querySelector('.recipe-list');
+          data.recipes.forEach(recipe => {
+            const recipeItem = document.createElement('div');
+            recipeItem.classList.add('recipe-item');
+
+            // Check if recipe is under development
+            if (recipe.description === "Page Under Development") {
+              recipeItem.innerHTML = `
+                <h2>${recipe.name}</h2>
+                <p>${recipe.description}</p>
+                <img src="images/${recipe.image}" alt="${recipe.name}" />
+              `;
+            } else {
+              // If recipe is complete, display ingredients, instructions, etc.
+              recipeItem.innerHTML = `
+                <h2>${recipe.name}</h2>
+                <p>${recipe.description}</p>
+                <img src="images/${recipe.image}" alt="${recipe.name}" />
+                <h3>Ingredients:</h3>
+                <ul>
+                  ${recipe.ingredients.map(ingredient => `<li>${ingredient.item}: ${ingredient.quantity}</li>`).join('')}
+                </ul>
+                <h3>Instructions:</h3>
+                <ol>
+                  ${recipe.instructions.map(instruction => `<li>${instruction}</li>`).join('')}
+                </ol>
+                <h3>Extra Notes:</h3>
+                <ul>
+                  ${recipe.extra_notes.map(note => `<li>${note}</li>`).join('')}
+                </ul>
+              `;
+            }
+            recipeListContainer.appendChild(recipeItem);
+          });
+        })
+        .catch(error => console.error('Error loading recipes:', error));
+    }
+
+    // Call function to load recipes when the page loads
+    window.onload = loadRecipes;
+  </script>
 </body>
 </html>
